--- a/requirements.txt
+++ b/requirements.txt
@@ -1,55 +1,65 @@
-﻿aiohttp==3.8.3
-aiosignal==1.3.1
-amqp==5.1.1
-asgiref==3.5.2
-async-timeout==4.0.2
-attrs==22.1.0
-billiard==3.6.4.0
-celery==5.2.7
-certifi==2022.12.7
-charset-normalizer==2.1.1
-click==8.1.3
-click-didyoumean==0.3.0
-click-plugins==1.1.1
-click-repl==0.2.0
-colorama==0.4.6
-curlify==2.2.1
-defusedxml==0.7.1
-diff-match-patch==20200713
-Django==4.1.3
-django-appconf==1.0.5
-django-autoslug==1.9.8
-django-ckeditor==6.5.0
-django-html-field==0.1.3
-django-imagekit==4.1.0
-django-import-export==3.0.1
-django-js-asset==2.0.0
-django-resized==1.0.2
-et-xmlfile==1.1.0
-facebook-business==18.0.0
-frozenlist==1.3.3
-gunicorn==20.1.0
-idna==3.4
-kombu==5.2.4
-MarkupPy==1.14
-multidict==6.0.3
-odfpy==1.4.1
-openpyxl==3.0.10
-pilkit==2.0
-Pillow==9.3.0
-prompt-toolkit==3.0.36
-pycountry==22.3.5
-pytz==2022.6
-PyYAML==6.0
-requests==2.28.1
-six==1.16.0
-sqlparse==0.4.3
-tablib==3.2.1
-translitcodec==0.7.0
-tzdata==2022.6
-urllib3==1.26.13
-vine==5.0.0
-wcwidth==0.2.5
-xlrd==2.0.1
-xlwt==1.3.0
-yarl==1.8.2
+﻿aiohttp>=3.8.3
+aiosignal>=1.3.1
+amqp>=5.1.1
+asgiref>=3.5.2
+async-timeout>=4.0.2
+attrs>=22.1.0
+billiard>=3.6.4.0
+celery>=5.2.7
+certifi>=2022.12.7
+charset-normalizer>=2.1.1
+click>=8.1.3
+click-didyoumean>=0.3.0
+click-plugins>=1.1.1
+click-repl>=0.2.0
+colorama>=0.4.6
+curlify>=2.2.1
+decorator>=4.4.2
+defusedxml>=0.7.1
+diff-match-patch>=20200713
+Django>=4.1.3
+django-appconf>=1.0.5
+django-autoslug>=1.9.8
+django-ckeditor>=6.5.0
+django-crontab>=0.7.1
+django-html-field>=0.1.3
+django-imagekit>=4.1.0
+django-import-export>=3.0.1
+django-js-asset>=2.0.0
+django-resized>=1.0.2
+et-xmlfile>=1.1.0
+facebook-business>=18.0.0
+frozenlist>=1.3.3
+gunicorn>=20.1.0
+idna>=3.4
+imageio>=2.27.0
+imageio-ffmpeg>=0.4.8
+kombu>=5.2.4
+MarkupPy>=1.14
+moviepy>=1.0.3
+multidict>=6.0.3
+numpy>=1.24.2
+odfpy>=1.4.1
+openpyxl>=3.0.10
+pilkit>=2.0
+Pillow>=9.3.0
+proglog>=0.1.10
+prompt-toolkit>=3.0.36
+psycopg2-binary>=2.9.5
+pycountry>=22.3.5
+python-decouple>=3.7
+pytz>=2022.6
+PyYAML>=6.0
+requests>=2.28.1
+six>=1.16.0
+sqlparse>=0.4.3
+tablib>=3.2.1
+tqdm>=4.65.0
+translitcodec>=0.7.0
+tzdata>=2022.6
+urllib3>=1.26.13
+vine>=5.0.0
+wcwidth>=0.2.5
+xlrd>=2.0.1
+xlwt>=1.3.0
+yarl>=1.8.2
